--- a/etl_pandas.ipynb
+++ b/etl_pandas.ipynb
@@ -9,7 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -19,17 +29,11 @@
       "                       Name  Age     Sex\n",
       "0   Braund, Mr. Owen Harris   22    male\n",
       "1  Allen, Mr. William Henry   35    male\n",
-      "2  Bonnell, Miss. Elizabeth   58  female\n",
-      "[['Braund, Mr. Owen Harris' 22 'male']\n",
-      " ['Allen, Mr. William Henry' 35 'male']\n",
-      " ['Bonnell, Miss. Elizabeth' 58 'female']]\n"
+      "2  Bonnell, Miss. Elizabeth   58  female\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np \n",
-    "import pandas as pd \n",
-    "\n",
     "df = pd.DataFrame(\n",
     "    {\n",
     "        \"Name\": [\n",
@@ -41,8 +45,25 @@
     "        \"Sex\": [\"male\", \"male\", \"female\"],\n",
     "    }\n",
     ")\n",
-    "print(df)\n",
-    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Braund, Mr. Owen Harris' 22 'male']\n",
+      " ['Allen, Mr. William Henry' 35 'male']\n",
+      " ['Bonnell, Miss. Elizabeth' 58 'female']]\n"
+     ]
+    }
+   ],
+   "source": [
     "arr = np.array(df)\n",
     "print(arr)"
    ]
