--- a/etl_pandas.ipynb
+++ b/etl_pandas.ipynb
@@ -333,20 +333,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Terhubung ke DuckDB : brazilian_ecommerce.db\n"
+      "Terhubung ke DuckDB : brazilian_ecommerce.db\n",
+      "Koneksi ke DuckDB tertutup\n"
      ]
     }
    ],
    "source": [
     "conn = duckdb.connect(\"brazilian_ecommerce.db\")\n",
-    "print(\"Terhubung ke DuckDB : brazilian_ecommerce.db\")"
+    "print(\"Terhubung ke DuckDB : brazilian_ecommerce.db\")\n",
+    "\n",
+    "# conn.close()\n",
+    "# print(\"Koneksi ke DuckDB tertutup\")"
    ]
   },
   {
