--- a/2. Diagram Skema Data Warehouse.md
+++ b/2. Diagram Skema Data Warehouse.md
@@ -4,7 +4,7 @@
 
 Berikut adalah struktur tabel dan relasi yang digunakan dalam skema data warehouse berbasis **Galaxy Schema (Fact Constellation)**.
 
-<img src="asset/format diagram.png" alt="Skema diagram" width="auto"/>
+<img src="assets/format_diagram.png" alt="Skema diagram" width="auto"/>
 
 ---
 
@@ -32,12 +32,6 @@ Kami memilih **Galaxy Schema** karena terdapat dua tabel fakta (`fact_orders` da
 | dim_products  | Menyimpan informasi produk    | product_id         | product_id VARCHAR(50), product_category_name VARCHAR(100), product_category_name_english VARCHAR(100),product_weight_g DECIMAL(10,2), product_length_cm DECIMAL(10,2),product_height_cm DECIMAL(10,2), product_width_cm DECIMAL(10,2) |
 | dim_date      | Menyimpan informasi waktu     | date_id (YYYYMMDD) | date_id INT, date_value DATE, day INT, month INT, month_name VARCHAR(20), year INT, day_of_week INT,day_name VARCHAR(20), quarter INT                                                                                                  |
 | dim_payments  | Menyimpan detail pembayaran   | payment_id         | payment_id INT, order_id VARCHAR(50), payment_sequential INT, payment_type VARCHAR(50), payment_installments INT, payment_value DECIMAL(10,2)                                                                                          |
-
----
-
-## Diagram Skema
-
-![Diagram Skema Data Warehouse](assets/format_diagram.png)
 
 ---
 
