add link drawio

--- a/2. Diagram Skema Data Warehouse.md
+++ b/2. Diagram Skema Data Warehouse.md
@@ -38,3 +38,7 @@ Kami memilih **Galaxy Schema** karena terdapat dua tabel fakta (`fact_orders` da
 ## Link Download PDF
 
 Anda dapat mengunduh file PDF lengkapnya di [sini](https://diska.ugm.ac.id/s/7Rpxb4ZWzzFEQ54).
+
+## Link Download diagram drawio
+
+Anda dapat mengunduh file diagram \*.drawio di [sini](assets/diagram_skema.drawio).
