update scd type2

--- a/5_etl_pandas.ipynb
+++ b/5_etl_pandas.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 2,
       "metadata": {
         "id": "wB2Sonj_TL_K"
       },
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -213,7 +213,7 @@
       ],
       "source": [
         "# Drop all tables if they exist\n",
-        "tables = [\"raw_customers\", \"raw_geo\", \"raw_items\", \"raw_payments\", \"raw_reviews\", \"raw_orders\", \"raw_products\", \"raw_sellers\", \"raw_category\", \"dim_payments\",\"fact_order_items\", \"fact_orders\", \"dim_customers\",  \"dim_date\", \"dim_products\", \"dim_sellers\"]\n",
+        "tables = [\"raw_customers\", \"raw_geo\", \"raw_items\", \"raw_payments\", \"raw_reviews\", \"raw_orders\", \"raw_products\", \"raw_sellers\", \"raw_category\"]\n",
         "for table in tables:\n",
         "    conn.execute(f\"DROP TABLE IF EXISTS {table};\")\n",
         "print(\"All tables have been dropped.\")"
@@ -256,6 +256,185 @@
         "    CREATE OR REPLACE TABLE raw_category AS SELECT * FROM category_csv;\n",
         "\"\"\")\n",
         "conn.execute(\"SHOW TABLES;\").fetchall()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "raw_products = conn.table(\"raw_products\").fetchdf()\n",
+        "\n",
+        "sample_products = raw_products.sample(5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 99,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['5b36015bf5fe27bac862d0b8f109ddfd', '7caf32b90e6fbccc6a37ee8633644895', 'ac4d8b40fc57f2366c3df122fbc2d353', '0d90fced28b749fa0468818d98cb8212', '2e34ed2b95d40201c3ca372ec80db75a']\n",
+            "[2078.0, 10493.0, 499.0, 1147.0, 630.0]\n",
+            "[ 2161. 10531.   508.  1187.   644.]\n"
+          ]
+        }
+      ],
+      "source": [
+        "ori_weight = [j['product_weight_g'] for i, j in sample_products.iterrows()]\n",
+        "ori_id = [j['product_id'] for i, j in sample_products.iterrows()]\n",
+        "print(ori_id)\n",
+        "\n",
+        "print(ori_weight)\n",
+        "random_weight = ori_weight + np.random.randint(0, 100, len(ori_weight))\n",
+        "print(random_weight)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>product_category_name</th>\n",
+              "      <th>product_name_lenght</th>\n",
+              "      <th>product_description_lenght</th>\n",
+              "      <th>product_photos_qty</th>\n",
+              "      <th>product_weight_g</th>\n",
+              "      <th>product_length_cm</th>\n",
+              "      <th>product_height_cm</th>\n",
+              "      <th>product_width_cm</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>20344</th>\n",
+              "      <td>5b36015bf5fe27bac862d0b8f109ddfd</td>\n",
+              "      <td>utilidades_domesticas</td>\n",
+              "      <td>56.0</td>\n",
+              "      <td>422.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>2161.0</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>15.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8974</th>\n",
+              "      <td>7caf32b90e6fbccc6a37ee8633644895</td>\n",
+              "      <td>utilidades_domesticas</td>\n",
+              "      <td>59.0</td>\n",
+              "      <td>419.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>10531.0</td>\n",
+              "      <td>70.0</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>33.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15222</th>\n",
+              "      <td>ac4d8b40fc57f2366c3df122fbc2d353</td>\n",
+              "      <td>construcao_ferramentas_construcao</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>1275.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>508.0</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>16.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1994</th>\n",
+              "      <td>0d90fced28b749fa0468818d98cb8212</td>\n",
+              "      <td>beleza_saude</td>\n",
+              "      <td>42.0</td>\n",
+              "      <td>534.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1187.0</td>\n",
+              "      <td>41.0</td>\n",
+              "      <td>23.0</td>\n",
+              "      <td>35.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16724</th>\n",
+              "      <td>2e34ed2b95d40201c3ca372ec80db75a</td>\n",
+              "      <td>ferramentas_jardim</td>\n",
+              "      <td>43.0</td>\n",
+              "      <td>1066.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>644.0</td>\n",
+              "      <td>33.0</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>18.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                             product_id              product_category_name  \\\n",
+              "20344  5b36015bf5fe27bac862d0b8f109ddfd              utilidades_domesticas   \n",
+              "8974   7caf32b90e6fbccc6a37ee8633644895              utilidades_domesticas   \n",
+              "15222  ac4d8b40fc57f2366c3df122fbc2d353  construcao_ferramentas_construcao   \n",
+              "1994   0d90fced28b749fa0468818d98cb8212                       beleza_saude   \n",
+              "16724  2e34ed2b95d40201c3ca372ec80db75a                 ferramentas_jardim   \n",
+              "\n",
+              "       product_name_lenght  product_description_lenght  product_photos_qty  \\\n",
+              "20344                 56.0                       422.0                 2.0   \n",
+              "8974                  59.0                       419.0                 3.0   \n",
+              "15222                 35.0                      1275.0                 3.0   \n",
+              "1994                  42.0                       534.0                 1.0   \n",
+              "16724                 43.0                      1066.0                 2.0   \n",
+              "\n",
+              "       product_weight_g  product_length_cm  product_height_cm  \\\n",
+              "20344            2161.0              100.0                3.0   \n",
+              "8974            10531.0               70.0               20.0   \n",
+              "15222             508.0               27.0               11.0   \n",
+              "1994             1187.0               41.0               23.0   \n",
+              "16724             644.0               33.0               10.0   \n",
+              "\n",
+              "       product_width_cm  \n",
+              "20344              15.0  \n",
+              "8974               33.0  \n",
+              "15222              16.0  \n",
+              "1994               35.0  \n",
+              "16724              18.0  "
+            ]
+          },
+          "execution_count": 104,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sample_products['product_weight_g'] = random_weight\n",
+        "raw_products.update(sample_products.set_index('product_id'), overwrite=True)\n",
+        "\n"
       ]
     },
     {
@@ -383,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -420,7 +599,7 @@
         }
       ],
       "source": [
-        "create_datawarehouse_schema()\n",
+        "# create_datawarehouse_schema()\n",
         "conn.execute(\"SHOW TABLES;\").fetchall()"
       ]
     },
@@ -444,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "metadata": {
         "id": "bDqt99xQTL_d"
       },
@@ -1750,7 +1929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 113,
       "metadata": {},
       "outputs": [
         {
@@ -1867,13 +2046,103 @@
               "4  20170213 2017-02-13 13:57:51  199.90          18.14  "
             ]
           },
-          "execution_count": 174,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "conn.execute(\"SELECT * FROM fact_order_items LIMIT 5\").fetchdf()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Implementasi SCD Type 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 112,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[355.0, 800.0, 300.0, 4735.0, 300.0]\n",
+            "[ 386.  840.  348. 4786.  389.]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Simulasi perubahan data produk\n",
+        "raw_products = pd.read_csv(os.path.join(path, 'olist_products_dataset.csv'))\n",
+        "sample_products = raw_products.sample(5)\n",
+        "\n",
+        "ori_weight = [j['product_weight_g'] for i, j in sample_products.iterrows()]\n",
+        "ori_id = [j['product_id'] for i, j in sample_products.iterrows()]\n",
+        "\n",
+        "print(ori_weight)\n",
+        "random_weight = ori_weight + np.random.randint(0, 100, len(ori_weight))\n",
+        "print(random_weight)\n",
+        "\n",
+        "sample_products['product_weight_g'] = random_weight\n",
+        "raw_products.update(sample_products.set_index('product_id'), overwrite=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 115,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<duckdb.duckdb.DuckDBPyConnection at 0x27ed73e4b70>"
+            ]
+          },
+          "execution_count": 115,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sample_products = sample_products[['product_id', \n",
+        "                                'product_category_name',  \n",
+        "                                'product_weight_g', \n",
+        "                                'product_length_cm', \n",
+        "                                'product_height_cm', \n",
+        "                                'product_width_cm']]\n",
+        "\n",
+        "sample_products['product_category_name_english'] = \"\"\n",
+        "sample_products['effective_date'] = datetime.now().date()\n",
+        "sample_products['expiration_date'] = None\n",
+        "sample_products['current_flag'] = True\n",
+        "\n",
+        "conn.execute(\"CREATE OR REPLACE TABLE products_changes AS SELECT * FROM sample_products;\")\n",
+        "conn.execute(\"\"\"\n",
+        "UPDATE dim_products\n",
+        "SET\n",
+        "    current_flag = FALSE,\n",
+        "    expiration_date = CURRENT_DATE - INTERVAL '1 day'\n",
+        "FROM products_changes\n",
+        "WHERE\n",
+        "    dim_products.product_id = products_changes.product_id\n",
+        "    AND products_changes.effective_date > dim_products.effective_date\n",
+        "    AND dim_products.current_flag = TRUE\n",
+        "    AND products_changes.current_flag = TRUE;\n",
+        "\"\"\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "conn.close()"
       ]
     }
   ],
@@ -1897,7 +2166,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.12.5"
     }
   },
   "nbformat": 4,
